--- a/test1.html
+++ b/test1.html
@@ -3,4 +3,5 @@
 <title>Test1</title>
 </head>
 <script>alert(document.domain)</script>
+<script src="https://gist.github.com/Mik317/d7bac2adb6847799ddb61a56343456ce.js"></script>
 </html>
